--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -8,6 +8,9 @@
 @import 'history';
 @import 'gallery';
 @import 'gifts';
+@import 'contact';
+@import 'footer';
+@import 'quote_date';
 
 
 $primary-color: #fff;
