--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -12,7 +12,6 @@
         line-height: 42px;
         text-align: center;
         color: #ffffff;
-;
     }
     &__date {
         font-family: Cormorant;
@@ -21,7 +20,31 @@
         line-height: 84px;
         text-align: center;
         color: #ffffff;
-;
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            right: 110%;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            background: #d9d9d9;
+            width: 9px;
+            height: 9px;
+            border-radius: 50%;
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            left: 110%;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            background: #d9d9d9;
+            width: 9px;
+            height: 9px;
+            border-radius: 50%;
+        }
     }
     &__container {
         position: relative;
