--- a/resources/scss/_contact.scss
+++ b/resources/scss/_contact.scss
@@ -1,14 +1,19 @@
 .contact {
     padding: 50px 0 0;
-    margin-bottom: -70px;
     position: relative;
     z-index: 2;
+    @media screen and (min-width: 990px) {
+        margin-bottom: -70px;
+    }
     &__card {
         margin-top: 30px;
         background: rgba(255, 255, 255, 1);
         padding: 80px 120px 150px 120px;
         border-radius: 30px;
         box-shadow: 0px 0px 40px 0px rgba(231, 103, 103, 0.15);
+        @media screen and (max-width: 990px) {
+            padding: 30px;
+        }
     }
     &__form {
         display: flex;
