--- a/resources/scss/_footer.scss
+++ b/resources/scss/_footer.scss
@@ -7,7 +7,10 @@
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     align-content: center;
-    justify-content: center;
+    justify-content: space-around;
+    &__logo {
+        max-width: 500px;
+    }
     &__container {
         grid-area: 1 / 1 / 2 / 2;
         position: relative;
@@ -16,8 +19,9 @@
         justify-content: space-between;
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
+        justify-content: flex-end;
         gap: 40px;
+        padding: 50px;
     }
     &__picture {
         grid-area: 1 / 1 / 2 / 2;
