--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -4,7 +4,8 @@
     overflow: hidden;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    padding: 60px;
     &__title {
         font-family: Cormorant;
         font-size: 35px;
@@ -12,6 +13,9 @@
         line-height: 42px;
         text-align: center;
         color: #ffffff;
+    }
+    &__logo {
+        max-width: 600px;
     }
     &__date {
         font-family: Cormorant;
@@ -21,6 +25,7 @@
         text-align: center;
         color: #ffffff;
         position: relative;
+        margin-top: auto;
         &::before {
             content: '';
             position: absolute;
@@ -55,6 +60,7 @@
         align-items: center;
         justify-content: space-around;
         gap: 40px;
+        min-height: calc(100vh - 120px);
     }
     &__picture {
         position: absolute;
@@ -64,7 +70,7 @@
         right: 0;
         img {
             object-fit: cover;
-            object-position: bottom;
+            object-position: center;
             width: 100%;
             height: 100%;
         }
