--- a/resources/scss/_footer.scss
+++ b/resources/scss/_footer.scss
@@ -10,6 +10,7 @@
     justify-content: space-around;
     &__logo {
         max-width: 500px;
+        width: 100%;
     }
     &__container {
         grid-area: 1 / 1 / 2 / 2;
