--- a/resources/scss/_invitation.scss
+++ b/resources/scss/_invitation.scss
@@ -22,6 +22,9 @@
             line-height: 24px;
             text-align: left;
             color: #fff;
+            @media screen and (max-width: 990px) {
+                font-size: 24px;
+            }
         }
         &--text {
             font-family: Comfortaa;
